# BigDataSmallPrice

./: .env.example  .gitignore  README.md  docker-compose.yml  ekz_15min_Sihl_2026-03-03.json  pyproject.toml  requirements.txt  resources.txt
airflow/: Dockerfile  pools.py
analysis/: cyclical_migration_analysis.md
backups/: current_state.txt
docs/: Proposal.html  Proposal.md  Stromtarife2026StadtwerkWinterthur.json  agent_prompt_backfill_ratelimit.md  proposal.aux  proposal.fdb_latexmk  proposal.fls  proposal.out  proposal.tex  req.md
models/: lstm_energy_20260406.pt  lstm_energy_loss_20260406.json  lstm_energy_loss_20260409.json  lstm_energy_loss_20260413.json  lstm_load_20260406.pt  lstm_load_loss_20260406.json  lstm_load_loss_20260409.json  lstm_load_loss_20260413.json  metrics_20260319.json  metrics_20260321.json  metrics_20260406.json  metrics_20260409.json  metrics_20260413.json  metrics_load_20260319.json  metrics_load_20260321.json  metrics_load_20260406.json  metrics_load_20260409.json  metrics_load_20260413.json  metrics_lstm_energy_20260406.json  metrics_lstm_energy_20260409.json  metrics_lstm_energy_20260413.json  metrics_lstm_load_20260406.json  metrics_lstm_load_20260409.json  metrics_lstm_load_20260413.json  metrics_transformer_load_20260406.json  metrics_transformer_load_20260409.json  metrics_transformer_load_20260413.json  model_load_loss_20260319.json  model_load_loss_20260321.json  model_load_loss_20260406.json  model_load_loss_20260409.json  model_load_loss_20260413.json  transformer_load_20260406.pt  transformer_load_loss_20260406.json  (+7 more)
(+62 files in other folders)
